Promo page is all over done

--- a/prepros.config
+++ b/prepros.config
@@ -957,9 +957,32 @@
         }
       },
       {
+        "file": "_app/confirm.pug",
+        "config": {
+          "customOutput": "confirm\\index.html"
+        }
+      },
+      {
         "file": "_app/index.pug",
         "config": {
           "customOutput": "index.html"
+        }
+      },
+      {
+        "file": "_app/promo.pug",
+        "config": {
+          "customOutput": "promo\\index.html"
+        }
+      },
+      {
+        "file": "_app/styl/promo.min.styl",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": false
+            }
+          },
+          "customOutput": "css\\promo.css"
         }
       },
       {
@@ -971,6 +994,14 @@
             }
           },
           "customOutput": "css\\styles.css"
+        }
+      },
+      {
+        "file": "css/promo.css",
+        "config": {
+          "autoCompile": true,
+          "sourceMap": true,
+          "customOutput": "css\\promo.min.css"
         }
       },
       {
