Adaptive get starting

--- a/prepros.config
+++ b/prepros.config
@@ -79,12 +79,468 @@
       }
     },
     "uploader": {
-      "remotePath": "/www/abramova.iomp.online/mak-pmomp-mak-webinar",
+      "remotePath": "/www/abramova.iomp.online/pmomp-mak-webinar",
       "timeout": 40000,
       "autoUpload": false,
       "reuseConnection": true,
       "connectionType": "ftp",
-      "history": []
+      "history": [
+        {
+          "file": "favicon.ico",
+          "mtimeMs": 1614746712000,
+          "date": "2022-10-23T22:47:31.279Z"
+        },
+        {
+          "file": "favicon.png",
+          "mtimeMs": 1614746716000,
+          "date": "2022-10-23T22:47:31.800Z"
+        },
+        {
+          "file": "favicon.svg",
+          "mtimeMs": 1614746722000,
+          "date": "2022-10-23T22:47:32.428Z"
+        },
+        {
+          "file": "index.html",
+          "mtimeMs": 1666561741052.0017,
+          "date": "2022-10-23T22:47:33.064Z"
+        },
+        {
+          "file": "css/promo.css",
+          "mtimeMs": 1666564997556.881,
+          "date": "2022-10-23T22:47:33.661Z"
+        },
+        {
+          "file": "css/promo.min.css",
+          "mtimeMs": 1666564998904.9702,
+          "date": "2022-10-23T22:47:34.288Z"
+        },
+        {
+          "file": "css/promo.min.css.map",
+          "mtimeMs": 1666564998920.974,
+          "date": "2022-10-23T22:47:34.855Z"
+        },
+        {
+          "file": "css/styles.css",
+          "mtimeMs": 1666564958582.4275,
+          "date": "2022-10-23T22:47:35.565Z"
+        },
+        {
+          "file": "css/styles.min.css",
+          "mtimeMs": 1666564963023.8228,
+          "date": "2022-10-23T22:47:36.282Z"
+        },
+        {
+          "file": "css/styles.min.css.map",
+          "mtimeMs": 1666564963027.825,
+          "date": "2022-10-23T22:47:36.876Z"
+        },
+        {
+          "file": "fonts/GilroyBold.eot",
+          "mtimeMs": 1602295704000,
+          "date": "2022-10-23T22:47:37.530Z"
+        },
+        {
+          "file": "fonts/GilroyBold.svg",
+          "mtimeMs": 1602295704000,
+          "date": "2022-10-23T22:47:38.523Z"
+        },
+        {
+          "file": "fonts/GilroyBold.ttf",
+          "mtimeMs": 1602295704000,
+          "date": "2022-10-23T22:47:39.148Z"
+        },
+        {
+          "file": "fonts/GilroyBold.woff",
+          "mtimeMs": 1602295704000,
+          "date": "2022-10-23T22:47:39.900Z"
+        },
+        {
+          "file": "fonts/GilroyBold.woff2",
+          "mtimeMs": 1602295704000,
+          "date": "2022-10-23T22:47:40.598Z"
+        },
+        {
+          "file": "fonts/GilroyLight.eot",
+          "mtimeMs": 1583403318000,
+          "date": "2022-10-23T22:47:41.408Z"
+        },
+        {
+          "file": "fonts/GilroyLight.svg",
+          "mtimeMs": 1583403318000,
+          "date": "2022-10-23T22:47:42.266Z"
+        },
+        {
+          "file": "fonts/GilroyLight.ttf",
+          "mtimeMs": 1583403318000,
+          "date": "2022-10-23T22:47:42.927Z"
+        },
+        {
+          "file": "fonts/GilroyLight.woff",
+          "mtimeMs": 1583403318000,
+          "date": "2022-10-23T22:47:43.625Z"
+        },
+        {
+          "file": "fonts/GilroyLight.woff2",
+          "mtimeMs": 1583403318000,
+          "date": "2022-10-23T22:47:44.306Z"
+        },
+        {
+          "file": "fonts/GilroyRegular.eot",
+          "mtimeMs": 1602294934000,
+          "date": "2022-10-23T22:47:45.001Z"
+        },
+        {
+          "file": "fonts/GilroyRegular.svg",
+          "mtimeMs": 1602294934000,
+          "date": "2022-10-23T22:47:45.865Z"
+        },
+        {
+          "file": "fonts/GilroyRegular.ttf",
+          "mtimeMs": 1602294934000,
+          "date": "2022-10-23T22:47:46.583Z"
+        },
+        {
+          "file": "fonts/GilroyRegular.woff",
+          "mtimeMs": 1602294934000,
+          "date": "2022-10-23T22:47:47.248Z"
+        },
+        {
+          "file": "fonts/GilroyRegular.woff2",
+          "mtimeMs": 1602294936000,
+          "date": "2022-10-23T22:47:47.829Z"
+        },
+        {
+          "file": "img/backs/blur.png",
+          "mtimeMs": 1666563024095.904,
+          "date": "2022-10-23T22:47:48.553Z"
+        },
+        {
+          "file": "img/backs/main.png",
+          "mtimeMs": 1666563028082.4558,
+          "date": "2022-10-23T22:47:49.348Z"
+        },
+        {
+          "file": "img/icons/calendar.png",
+          "mtimeMs": 1666563066479.955,
+          "date": "2022-10-23T22:47:50.015Z"
+        },
+        {
+          "file": "img/icons/next.png",
+          "mtimeMs": 1666563070429.8147,
+          "date": "2022-10-23T22:47:50.602Z"
+        },
+        {
+          "file": "img/icons/play.png",
+          "mtimeMs": 1666563076859.194,
+          "date": "2022-10-23T22:47:51.204Z"
+        },
+        {
+          "file": "img/icons/prev.png",
+          "mtimeMs": 1666563055843.0837,
+          "date": "2022-10-23T22:47:51.799Z"
+        },
+        {
+          "file": "img/icons/tg.png",
+          "mtimeMs": 1666563886680.5261,
+          "date": "2022-10-23T22:47:52.381Z"
+        },
+        {
+          "file": "img/icons/time.png",
+          "mtimeMs": 1666563062000.5405,
+          "date": "2022-10-23T22:47:53.035Z"
+        },
+        {
+          "file": "img/images/ellipse.png",
+          "mtimeMs": 1666545098000,
+          "date": "2022-10-23T22:47:53.688Z"
+        },
+        {
+          "file": "img/images/janna.png",
+          "mtimeMs": 1666545098000,
+          "date": "2022-10-23T22:47:54.387Z"
+        },
+        {
+          "file": "img/images/plan-stars-1.png",
+          "mtimeMs": 1666545098000,
+          "date": "2022-10-23T22:47:54.995Z"
+        },
+        {
+          "file": "img/images/plan-stars-2.png",
+          "mtimeMs": 1666545098000,
+          "date": "2022-10-23T22:47:55.723Z"
+        },
+        {
+          "file": "img/images/star-1.png",
+          "mtimeMs": 1666545098000,
+          "date": "2022-10-23T22:47:56.330Z"
+        },
+        {
+          "file": "img/images/star-2.png",
+          "mtimeMs": 1666545098000,
+          "date": "2022-10-23T22:47:56.951Z"
+        },
+        {
+          "file": "img/images/star-main-1.png",
+          "mtimeMs": 1666545098000,
+          "date": "2022-10-23T22:47:57.561Z"
+        },
+        {
+          "file": "img/images/star-main-2.png",
+          "mtimeMs": 1666545098000,
+          "date": "2022-10-23T22:47:58.155Z"
+        },
+        {
+          "file": "img/images/video-star.png",
+          "mtimeMs": 1666545098000,
+          "date": "2022-10-23T22:47:58.749Z"
+        },
+        {
+          "file": "img/images/video-stars.png",
+          "mtimeMs": 1666545098000,
+          "date": "2022-10-23T22:47:59.377Z"
+        },
+        {
+          "file": "img/images/video.png",
+          "mtimeMs": 1666545098000,
+          "date": "2022-10-23T22:48:00.938Z"
+        },
+        {
+          "file": "img/revs/text-1.jpg",
+          "mtimeMs": 1666545176000,
+          "date": "2022-10-23T22:48:01.674Z"
+        },
+        {
+          "file": "img/revs/text-1.min.jpg",
+          "mtimeMs": 1666545176000,
+          "date": "2022-10-23T22:48:02.379Z"
+        },
+        {
+          "file": "img/revs/text-10.jpg",
+          "mtimeMs": 1666545176000,
+          "date": "2022-10-23T22:48:03.084Z"
+        },
+        {
+          "file": "img/revs/text-10.min.jpg",
+          "mtimeMs": 1666545176000,
+          "date": "2022-10-23T22:48:03.787Z"
+        },
+        {
+          "file": "img/revs/text-11.jpg",
+          "mtimeMs": 1666545218000,
+          "date": "2022-10-23T22:48:04.568Z"
+        },
+        {
+          "file": "img/revs/text-11.min.jpg",
+          "mtimeMs": 1666545218000,
+          "date": "2022-10-23T22:48:05.364Z"
+        },
+        {
+          "file": "img/revs/text-12.jpg",
+          "mtimeMs": 1666545218000,
+          "date": "2022-10-23T22:48:06.084Z"
+        },
+        {
+          "file": "img/revs/text-12.min.jpg",
+          "mtimeMs": 1666545218000,
+          "date": "2022-10-23T22:48:06.774Z"
+        },
+        {
+          "file": "img/revs/text-13.jpg",
+          "mtimeMs": 1666545218000,
+          "date": "2022-10-23T22:48:07.557Z"
+        },
+        {
+          "file": "img/revs/text-13.min.jpg",
+          "mtimeMs": 1666545218000,
+          "date": "2022-10-23T22:48:08.252Z"
+        },
+        {
+          "file": "img/revs/text-14.jpg",
+          "mtimeMs": 1666545218000,
+          "date": "2022-10-23T22:48:09.020Z"
+        },
+        {
+          "file": "img/revs/text-14.min.jpg",
+          "mtimeMs": 1666545218000,
+          "date": "2022-10-23T22:48:09.727Z"
+        },
+        {
+          "file": "img/revs/text-15.jpg",
+          "mtimeMs": 1666545218000,
+          "date": "2022-10-23T22:48:10.459Z"
+        },
+        {
+          "file": "img/revs/text-15.min.jpg",
+          "mtimeMs": 1666545218000,
+          "date": "2022-10-23T22:48:11.179Z"
+        },
+        {
+          "file": "img/revs/text-2.jpg",
+          "mtimeMs": 1666545176000,
+          "date": "2022-10-23T22:48:11.902Z"
+        },
+        {
+          "file": "img/revs/text-2.min.jpg",
+          "mtimeMs": 1666545176000,
+          "date": "2022-10-23T22:48:12.541Z"
+        },
+        {
+          "file": "img/revs/text-3.jpg",
+          "mtimeMs": 1666545176000,
+          "date": "2022-10-23T22:48:13.229Z"
+        },
+        {
+          "file": "img/revs/text-3.min.jpg",
+          "mtimeMs": 1666545176000,
+          "date": "2022-10-23T22:48:13.941Z"
+        },
+        {
+          "file": "img/revs/text-4.jpg",
+          "mtimeMs": 1666545176000,
+          "date": "2022-10-23T22:48:14.648Z"
+        },
+        {
+          "file": "img/revs/text-4.min.jpg",
+          "mtimeMs": 1666545176000,
+          "date": "2022-10-23T22:48:15.342Z"
+        },
+        {
+          "file": "img/revs/text-5.jpg",
+          "mtimeMs": 1666545176000,
+          "date": "2022-10-23T22:48:16.080Z"
+        },
+        {
+          "file": "img/revs/text-5.min.jpg",
+          "mtimeMs": 1666545178000,
+          "date": "2022-10-23T22:48:16.759Z"
+        },
+        {
+          "file": "img/revs/text-6.jpg",
+          "mtimeMs": 1666545178000,
+          "date": "2022-10-23T22:48:17.809Z"
+        },
+        {
+          "file": "img/revs/text-6.min.jpg",
+          "mtimeMs": 1666545178000,
+          "date": "2022-10-23T22:48:18.807Z"
+        },
+        {
+          "file": "img/revs/text-7.jpg",
+          "mtimeMs": 1666545178000,
+          "date": "2022-10-23T22:48:19.505Z"
+        },
+        {
+          "file": "img/revs/text-7.min.jpg",
+          "mtimeMs": 1666545178000,
+          "date": "2022-10-23T22:48:20.921Z"
+        },
+        {
+          "file": "img/revs/text-8.jpg",
+          "mtimeMs": 1666545176000,
+          "date": "2022-10-23T22:48:21.626Z"
+        },
+        {
+          "file": "img/revs/text-8.min.jpg",
+          "mtimeMs": 1666545176000,
+          "date": "2022-10-23T22:48:22.319Z"
+        },
+        {
+          "file": "img/revs/text-9.jpg",
+          "mtimeMs": 1666545176000,
+          "date": "2022-10-23T22:48:23.042Z"
+        },
+        {
+          "file": "img/revs/text-9.min.jpg",
+          "mtimeMs": 1666545176000,
+          "date": "2022-10-23T22:48:24.002Z"
+        },
+        {
+          "file": "img/revs/video-1.jpg",
+          "mtimeMs": 1666545248000,
+          "date": "2022-10-23T22:48:24.665Z"
+        },
+        {
+          "file": "img/revs/video-10.jpg",
+          "mtimeMs": 1666545248000,
+          "date": "2022-10-23T22:48:25.405Z"
+        },
+        {
+          "file": "img/revs/video-2.jpg",
+          "mtimeMs": 1666545248000,
+          "date": "2022-10-23T22:48:26.563Z"
+        },
+        {
+          "file": "img/revs/video-3.jpg",
+          "mtimeMs": 1666545248000,
+          "date": "2022-10-23T22:48:27.487Z"
+        },
+        {
+          "file": "img/revs/video-4.jpg",
+          "mtimeMs": 1666545248000,
+          "date": "2022-10-23T22:48:28.137Z"
+        },
+        {
+          "file": "img/revs/video-5.jpg",
+          "mtimeMs": 1666545248000,
+          "date": "2022-10-23T22:48:28.748Z"
+        },
+        {
+          "file": "img/revs/video-6.jpg",
+          "mtimeMs": 1666545248000,
+          "date": "2022-10-23T22:48:29.347Z"
+        },
+        {
+          "file": "img/revs/video-7.jpg",
+          "mtimeMs": 1666545248000,
+          "date": "2022-10-23T22:48:29.950Z"
+        },
+        {
+          "file": "img/revs/video-8.jpg",
+          "mtimeMs": 1666545248000,
+          "date": "2022-10-23T22:48:30.778Z"
+        },
+        {
+          "file": "img/revs/video-9.jpg",
+          "mtimeMs": 1666545248000,
+          "date": "2022-10-23T22:48:31.394Z"
+        },
+        {
+          "file": "js/libs.js",
+          "mtimeMs": 1666526991472.9238,
+          "date": "2022-10-23T22:48:32.165Z"
+        },
+        {
+          "file": "js/libs.min.js",
+          "mtimeMs": 1666527006837.4326,
+          "date": "2022-10-23T22:48:32.817Z"
+        },
+        {
+          "file": "js/libs.min.js.map",
+          "mtimeMs": 1666527006977.5981,
+          "date": "2022-10-23T22:48:33.465Z"
+        },
+        {
+          "file": "js/scripts.js",
+          "mtimeMs": 1666561394115.08,
+          "date": "2022-10-23T22:48:34.024Z"
+        },
+        {
+          "file": "js/scripts.min.js",
+          "mtimeMs": 1666561395250.0066,
+          "date": "2022-10-23T22:48:34.559Z"
+        },
+        {
+          "file": "js/scripts.min.js.map",
+          "mtimeMs": 1666561395254.0034,
+          "date": "2022-10-23T22:48:35.284Z"
+        },
+        {
+          "file": "promo/index.html",
+          "mtimeMs": 1666564613927.1118,
+          "date": "2022-10-23T22:48:35.869Z"
+        }
+      ]
     },
     "packages": {
       "createPackageLock": true
