Adaptive keeping contnue

--- a/prepros.config
+++ b/prepros.config
@@ -37,7 +37,8 @@
           "wp-includes",
           "node_modules",
           "Prepros Export",
-          "bower_components"
+          "bower_components",
+          "/_app/confirm.pug"
         ],
         "exceptions": []
       }
@@ -102,38 +103,38 @@
         },
         {
           "file": "index.html",
-          "mtimeMs": 1666561741052.0017,
-          "date": "2022-10-23T22:47:33.064Z"
+          "mtimeMs": 1666573215497.718,
+          "date": "2022-10-24T01:23:29.708Z"
         },
         {
           "file": "css/promo.css",
-          "mtimeMs": 1666564997556.881,
-          "date": "2022-10-23T22:47:33.661Z"
+          "mtimeMs": 1666572698564.0703,
+          "date": "2022-10-24T01:23:30.311Z"
         },
         {
           "file": "css/promo.min.css",
-          "mtimeMs": 1666564998904.9702,
-          "date": "2022-10-23T22:47:34.288Z"
+          "mtimeMs": 1666572702446.565,
+          "date": "2022-10-24T01:23:30.875Z"
         },
         {
           "file": "css/promo.min.css.map",
-          "mtimeMs": 1666564998920.974,
-          "date": "2022-10-23T22:47:34.855Z"
+          "mtimeMs": 1666572703477.8452,
+          "date": "2022-10-24T01:23:31.367Z"
         },
         {
           "file": "css/styles.css",
-          "mtimeMs": 1666564958582.4275,
-          "date": "2022-10-23T22:47:35.565Z"
+          "mtimeMs": 1666574472632.8074,
+          "date": "2022-10-24T01:23:32.003Z"
         },
         {
           "file": "css/styles.min.css",
-          "mtimeMs": 1666564963023.8228,
-          "date": "2022-10-23T22:47:36.282Z"
+          "mtimeMs": 1666574475393.6245,
+          "date": "2022-10-24T01:23:32.586Z"
         },
         {
           "file": "css/styles.min.css.map",
-          "mtimeMs": 1666564963027.825,
-          "date": "2022-10-23T22:47:36.876Z"
+          "mtimeMs": 1666574475407.6262,
+          "date": "2022-10-24T01:23:33.100Z"
         },
         {
           "file": "fonts/GilroyBold.eot",
@@ -522,23 +523,48 @@
         },
         {
           "file": "js/scripts.js",
-          "mtimeMs": 1666561394115.08,
-          "date": "2022-10-23T22:48:34.024Z"
+          "mtimeMs": 1666574448329.461,
+          "date": "2022-10-24T01:23:34.863Z"
         },
         {
           "file": "js/scripts.min.js",
-          "mtimeMs": 1666561395250.0066,
-          "date": "2022-10-23T22:48:34.559Z"
+          "mtimeMs": 1666574449640.632,
+          "date": "2022-10-24T01:23:35.304Z"
         },
         {
           "file": "js/scripts.min.js.map",
-          "mtimeMs": 1666561395254.0034,
-          "date": "2022-10-23T22:48:35.284Z"
+          "mtimeMs": 1666574449644.6333,
+          "date": "2022-10-24T01:23:35.771Z"
         },
         {
           "file": "promo/index.html",
           "mtimeMs": 1666564613927.1118,
           "date": "2022-10-23T22:48:35.869Z"
+        },
+        {
+          "file": "img/images/plan-stars-1-mid.png",
+          "mtimeMs": 1666570009845.882,
+          "date": "2022-10-24T00:08:41.089Z"
+        },
+        {
+          "file": "img/images/plan-stars-2-mid.png",
+          "mtimeMs": 1666570014710.082,
+          "date": "2022-10-24T00:08:41.586Z"
+        },
+        {
+          "file": "img/images/video-stars-mid.png",
+          "mtimeMs": 1666570020724.377,
+          "date": "2022-10-24T00:08:42.570Z"
+        },
+        {
+          "file": "img/backs/main-mid.png",
+          "mtimeMs": 1666574552296.797,
+          "date": "2022-10-24T01:23:33.875Z"
+        },
+        {
+          "file": "img/images/janna-min.png",
+          "mtimeMs": 1666574561890.3179,
+          "date": "2022-10-24T01:23:34.409Z"
         }
       ]
     },
