--- a/prepros.config
+++ b/prepros.config
@@ -103,38 +103,38 @@
         },
         {
           "file": "index.html",
-          "mtimeMs": 1666573215497.718,
-          "date": "2022-10-24T01:23:29.708Z"
+          "mtimeMs": 1666608679000.7922,
+          "date": "2022-10-24T10:57:43.646Z"
         },
         {
           "file": "css/promo.css",
-          "mtimeMs": 1666572698564.0703,
-          "date": "2022-10-24T01:23:30.311Z"
+          "mtimeMs": 1666605299078.6445,
+          "date": "2022-10-24T09:55:55.319Z"
         },
         {
           "file": "css/promo.min.css",
-          "mtimeMs": 1666572702446.565,
-          "date": "2022-10-24T01:23:30.875Z"
+          "mtimeMs": 1666605301256.6497,
+          "date": "2022-10-24T09:55:55.818Z"
         },
         {
           "file": "css/promo.min.css.map",
-          "mtimeMs": 1666572703477.8452,
-          "date": "2022-10-24T01:23:31.367Z"
+          "mtimeMs": 1666605301321.6472,
+          "date": "2022-10-24T09:55:56.301Z"
         },
         {
           "file": "css/styles.css",
-          "mtimeMs": 1666574472632.8074,
-          "date": "2022-10-24T01:23:32.003Z"
+          "mtimeMs": 1666611795876.7192,
+          "date": "2022-10-24T11:43:47.152Z"
         },
         {
           "file": "css/styles.min.css",
-          "mtimeMs": 1666574475393.6245,
-          "date": "2022-10-24T01:23:32.586Z"
+          "mtimeMs": 1666611799494.719,
+          "date": "2022-10-24T11:43:47.735Z"
         },
         {
           "file": "css/styles.min.css.map",
-          "mtimeMs": 1666574475407.6262,
-          "date": "2022-10-24T01:23:33.100Z"
+          "mtimeMs": 1666611799497.721,
+          "date": "2022-10-24T11:43:48.225Z"
         },
         {
           "file": "fonts/GilroyBold.eot",
@@ -538,8 +538,8 @@
         },
         {
           "file": "promo/index.html",
-          "mtimeMs": 1666564613927.1118,
-          "date": "2022-10-23T22:48:35.869Z"
+          "mtimeMs": 1666604613337.533,
+          "date": "2022-10-24T09:45:24.332Z"
         },
         {
           "file": "img/images/plan-stars-1-mid.png",
@@ -565,6 +565,11 @@
           "file": "img/images/janna-min.png",
           "mtimeMs": 1666574561890.3179,
           "date": "2022-10-24T01:23:34.409Z"
+        },
+        {
+          "file": "img/images/plan-stars-1-min.png",
+          "mtimeMs": 1666608350717.5576,
+          "date": "2022-10-24T10:46:07.895Z"
         }
       ]
     },
