Main page is adapted

--- a/prepros.config
+++ b/prepros.config
@@ -103,8 +103,8 @@
         },
         {
           "file": "index.html",
-          "mtimeMs": 1666608679000.7922,
-          "date": "2022-10-24T10:57:43.646Z"
+          "mtimeMs": 1666616834622.2334,
+          "date": "2022-10-24T13:07:52.894Z"
         },
         {
           "file": "css/promo.css",
@@ -123,18 +123,18 @@
         },
         {
           "file": "css/styles.css",
-          "mtimeMs": 1666611795876.7192,
-          "date": "2022-10-24T11:43:47.152Z"
+          "mtimeMs": 1666622022089.7224,
+          "date": "2022-10-24T14:33:45.786Z"
         },
         {
           "file": "css/styles.min.css",
-          "mtimeMs": 1666611799494.719,
-          "date": "2022-10-24T11:43:47.735Z"
+          "mtimeMs": 1666622025896.241,
+          "date": "2022-10-24T14:33:46.413Z"
         },
         {
           "file": "css/styles.min.css.map",
-          "mtimeMs": 1666611799497.721,
-          "date": "2022-10-24T11:43:48.225Z"
+          "mtimeMs": 1666622026016.2412,
+          "date": "2022-10-24T14:33:47.001Z"
         },
         {
           "file": "fonts/GilroyBold.eot",
@@ -223,8 +223,8 @@
         },
         {
           "file": "img/icons/calendar.png",
-          "mtimeMs": 1666563066479.955,
-          "date": "2022-10-23T22:47:50.015Z"
+          "mtimeMs": 1666617260764.8257,
+          "date": "2022-10-24T13:27:01.940Z"
         },
         {
           "file": "img/icons/next.png",
@@ -570,6 +570,11 @@
           "file": "img/images/plan-stars-1-min.png",
           "mtimeMs": 1666608350717.5576,
           "date": "2022-10-24T10:46:07.895Z"
+        },
+        {
+          "file": "img/backs/main-min.png",
+          "mtimeMs": 1666620585913.8835,
+          "date": "2022-10-24T14:33:47.712Z"
         }
       ]
     },
