Main page and Confirm page are all over done

--- a/prepros.config
+++ b/prepros.config
@@ -37,8 +37,7 @@
           "wp-includes",
           "node_modules",
           "Prepros Export",
-          "bower_components",
-          "/_app/confirm.pug"
+          "bower_components"
         ],
         "exceptions": []
       }
@@ -108,18 +107,18 @@
         },
         {
           "file": "css/promo.css",
-          "mtimeMs": 1666605299078.6445,
-          "date": "2022-10-24T09:55:55.319Z"
+          "mtimeMs": 1666623869347.838,
+          "date": "2022-10-24T15:09:33.977Z"
         },
         {
           "file": "css/promo.min.css",
-          "mtimeMs": 1666605301256.6497,
-          "date": "2022-10-24T09:55:55.818Z"
+          "mtimeMs": 1666623870837.837,
+          "date": "2022-10-24T15:09:34.491Z"
         },
         {
           "file": "css/promo.min.css.map",
-          "mtimeMs": 1666605301321.6472,
-          "date": "2022-10-24T09:55:56.301Z"
+          "mtimeMs": 1666623870853.8357,
+          "date": "2022-10-24T15:09:34.959Z"
         },
         {
           "file": "css/styles.css",
@@ -573,8 +572,48 @@
         },
         {
           "file": "img/backs/main-min.png",
-          "mtimeMs": 1666620585913.8835,
-          "date": "2022-10-24T14:33:47.712Z"
+          "mtimeMs": 1666622599159.1226,
+          "date": "2022-10-24T15:09:35.692Z"
+        },
+        {
+          "file": "confirm/index.html",
+          "mtimeMs": 1666623940535.759,
+          "date": "2022-10-24T15:09:30.840Z"
+        },
+        {
+          "file": "css/confirm.css",
+          "mtimeMs": 1666624265471.7837,
+          "date": "2022-10-24T15:11:52.376Z"
+        },
+        {
+          "file": "css/confirm.min.css",
+          "mtimeMs": 1666624266964.802,
+          "date": "2022-10-24T15:11:52.944Z"
+        },
+        {
+          "file": "css/confirm.min.css.map",
+          "mtimeMs": 1666624266980.8025,
+          "date": "2022-10-24T15:11:53.411Z"
+        },
+        {
+          "file": "img/icons/gmail.png",
+          "mtimeMs": 1666624227737.542,
+          "date": "2022-10-24T15:11:53.886Z"
+        },
+        {
+          "file": "img/icons/mailru.png",
+          "mtimeMs": 1666624232020.915,
+          "date": "2022-10-24T15:11:54.399Z"
+        },
+        {
+          "file": "img/icons/yahoo.png",
+          "mtimeMs": 1666624217403.9023,
+          "date": "2022-10-24T15:11:54.889Z"
+        },
+        {
+          "file": "img/icons/yandex.png",
+          "mtimeMs": 1666624222737.0227,
+          "date": "2022-10-24T15:11:55.360Z"
         }
       ]
     },
@@ -1467,6 +1506,17 @@
         }
       },
       {
+        "file": "_app/styl/confirm.min.styl",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": false
+            }
+          },
+          "customOutput": "css\\confirm.css"
+        }
+      },
+      {
         "file": "_app/styl/promo.min.styl",
         "config": {
           "tasks": {
@@ -1486,6 +1536,14 @@
             }
           },
           "customOutput": "css\\styles.css"
+        }
+      },
+      {
+        "file": "css/confirm.css",
+        "config": {
+          "autoCompile": true,
+          "sourceMap": true,
+          "customOutput": "css\\confirm.min.css"
         }
       },
       {
